cmake_minimum_required(VERSION 3.0)

OPTION (BUILD_SHARED_LIBS "Build using shared libraries" ON)

PROJECT(vkvg-svg VERSION 0.1.0 DESCRIPTION "Vkvg svg library")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

IF (UNIX)
	SET(LINKER_FLAGS "-lm")
	SET(CMAKE_EXE_LINKER_FLAGS ${LINKER_FLAGS})
	SET(CMAKE_SHARED_LINKER_FLAGS ${LINKER_FLAGS})
ENDIF()

IF (NOT TARGET vkh)
	FIND_PACKAGE(vkh REQUIRED)
ELSE()
	ADD_SUBDIRECTORY (vkh)
ENDIF()

IF (NOT TARGET vkvg)
	FIND_PACKAGE(vkvg REQUIRED)
ELSE()
	ADD_SUBDIRECTORY (vkh)
ENDIF()

FILE(GLOB sources src/*.c)

IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
	ADD_DEFINITIONS (-DDEBUG)
ENDIF ()

ADD_LIBRARY(${PROJECT_NAME} ${sources})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
	PRIVATE
		"${CMAKE_CURRENT_SOURCE_DIR}/src"
	PUBLIC
		"${CMAKE_CURRENT_SOURCE_DIR}/include"
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	"$<$<TARGET_EXISTS:vkh>:vkh>"
	"$<$<TARGET_EXISTS:vkvg>:vkvg>"
	${VKVG_LIBRARIES}
	${VKH_LIBRARIES}
)

INCLUDE("${CMAKE_CURRENT_SOURCE_DIR}/cmake/ConfigLibrary.cmake")

configure_library ()

ADD_SUBDIRECTORY(tests)

