cmake_minimum_required(VERSION 3.16)

PROJECT(vkvg-svg VERSION 0.1.0 DESCRIPTION "Vkvg svg library")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
	ADD_DEFINITIONS (-DDEBUG)
ENDIF ()

FILE(GLOB sources src/*.c)

IF (VKVG_SVG)#defined by vkvg if built for
	ADD_LIBRARY(${PROJECT_NAME} OBJECT ${sources})
	SET_PROPERTY(TARGET "${PROJECT_NAME}" PROPERTY POSITION_INDEPENDENT_CODE ON)
	TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
		PUBLIC
			"${CMAKE_CURRENT_SOURCE_DIR}/src"
			"${CMAKE_CURRENT_SOURCE_DIR}/include"
			$<$<BOOL:$<TARGET_EXISTS:vkvg>>:$<TARGET_PROPERTY:vkvg,INCLUDE_DIRECTORIES>>
			$<$<BOOL:$<TARGET_EXISTS:vkvg_static>>:$<TARGET_PROPERTY:vkvg_static,INCLUDE_DIRECTORIES>>
			$<$<BOOL:$<TARGET_EXISTS:vkvg_shared>>:$<TARGET_PROPERTY:vkvg_shared,INCLUDE_DIRECTORIES>>
		)
ELSE ()
	FIND_PACKAGE(vkh REQUIRED)
	FIND_PACKAGE(vkvg REQUIRED)

	ADD_LIBRARY(${PROJECT_NAME} ${sources})

	TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
		PRIVATE
			"${CMAKE_CURRENT_SOURCE_DIR}/src"
		PUBLIC
			"${CMAKE_CURRENT_SOURCE_DIR}/include"
	)

	TARGET_LINK_LIBRARIES(${PROJECT_NAME}
		${vkvg_LIBRARIES}
		${vkh_LIBRARIES}
	)

	INCLUDE("${CMAKE_CURRENT_SOURCE_DIR}/cmake/ConfigLibrary.cmake")

	configure_library ()

	ADD_SUBDIRECTORY(tests)
ENDIF()





